--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="title">
                 <div>
                     <h2 style="letter-spacing: 5px">HO THI THUY HIEN</h2>
-                    <i style="padding-left: 70px">Trợ giảng Tiếng Anh</i>
+                    <i style="padding-left: 70px">Giáo viên Tiếng Anh</i>
                 </div>
 
             </div>
