--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
                     <p style="width: 50%; margin-bottom: 0">- Cẩn thận, tỉ mỉ, sáng tạo trong công việc</p>
                     <p style="margin-bottom: 0">- Phối hợp đội nhóm rất tốt, biết lắng nghe</p>
                 </div>
+                  <div style="display: flex">
+                    <p style="width: 50%; margin-bottom: 0">- Kỹ năng truyền đạt thông tin tốt</p>
+                    <p style="margin-bottom: 0">- Kỹ năng giao tiếp tốt</p>
+                </div>
 
             </div>
 
